<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/txttopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgbackground"
            android:layout_width="341dp"
            android:layout_height="442dp"
            android:layout_marginTop="64dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txttopic"
            app:srcCompat="@drawable/ash" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="222dp"
            android:layout_height="287dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/imgbackground"
            app:layout_constraintEnd_toEndOf="@+id/imgbackground"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/imgbackground"
            app:layout_constraintTop_toBottomOf="@+id/txttopic"
            app:layout_constraintVertical_bias="0.727"
            app:srcCompat="@drawable/white" />

        <Button
            android:id="@+id/btnload"
            android:layout_width="123dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:text="@string/load"
            app:layout_constraintEnd_toStartOf="@+id/btncam"
            app:layout_constraintHorizontal_bias="0.852"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgbackground" />

        <Button
            android:id="@+id/btncam"
            android:layout_width="123dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="64dp"
            android:text="@string/camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgbackground" />

        <ImageView
            android:id="@+id/imggallery"
            android:layout_width="188dp"
            android:layout_height="212dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.329"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="135dp"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/print"
            app:layout_constraintBottom_toTopOf="@+id/imgbackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txttopic"
            app:layout_constraintVertical_bias="0.615" />

        <ImageView
            android:id="@+id/download"
            android:layout_width="48dp"
            android:layout_height="43dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/baseline_file_download_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnremove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/remove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnload" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>